# controller/office_controller.go
@@ -1,12 +1,11 @@
 package controller
 
 import (
-	"cleancode/constant"
 	"cleancode/helper"
 	"cleancode/models"
 	"log"
 	"net/http"
-	"text/template"
+	"os"
 	"time"
 
 	"github.com/gin-gonic/gin"
@@ -24,7 +23,7 @@ type Request struct {
 // @Accept					json
 // @Produce					json
 // @Param					request body models.Request true "Request body should have a 'month' field in YYYY-MM format. Example: { \"month\": \"2014-05\" }"
-// @Success					200 {object} models.Response
+// @Success					200 {object} string
 // @Failure					400 {object} models.ErrorResponse
 // @Router					/calculate [post]
 func CalculateHandler(c *gin.Context) {
@@ -70,51 +69,20 @@ func CalculateHandler(c *gin.Context) {
 	// })
 }
 
-// ManualHandler displays the CSV data of reservations in an HTML table with this service functionality.
+// ManualHandler displays the CSV data of reservations text file.
 // @Summary      Show reservations table
-// @Description  Displays the CSV data of reservations in an HTML table.
+// @Description  Displays the CSV data.
 // @Tags         OfficeReservation API
 // @Produce      text/html
+// @Param 		Authorization header string true "Insert your access token" default(Bearer )
 // @Success      200 {string} string "HTML page with CSV data"
 // @Failure      500 {object} models.ErrorResponse
 // @Router       /manual [get]
 func ManualHandler(c *gin.Context) {
-	reservations, err := helper.ReadReservations()
+	data, err := os.ReadFile("input.txt") // Make sure path is correct
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
+		c.String(http.StatusInternalServerError, "Failed to read input.txt: %v", err)
 		return
 	}
-
-	type TableRow struct {
-		Capacity    int
-		MonthlyRate float64
-		StartDate   string
-		EndDate     string
-	}
-	var rows []TableRow
-	for _, r := range reservations {
-		end := "Ongoing"
-		if r.EndDate != nil {
-			end = r.EndDate.Format("2006-01-02")
-		}
-		rows = append(rows, TableRow{
-			Capacity:    r.Capacity,
-			MonthlyRate: r.MonthlyRate,
-			StartDate:   r.StartDate.Format("2006-01-02"),
-			EndDate:     end,
-		})
-	}
-	tmpl, err := template.New("manual").Parse(constant.HtmlTemplate)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
-		return
-	}
-
-	c.Header("Content-Type", "text/html")
-	if err := tmpl.Execute(c.Writer, map[string]interface{}{
-		"Rows": rows,
-	}); err != nil {
-		log.Printf("Template execution error: %v", err)
-		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: "Template execution failed" + err.Error()})
-	}
+	c.Data(http.StatusOK, "text/plain", data)
 }
