# docs/swagger.json
@@ -35,7 +35,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -57,6 +57,16 @@
                     "OfficeReservation API"
                 ],
                 "summary": "Show reservations table",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "HTML page with CSV data",
@@ -89,20 +99,6 @@
                 "month": {
                     "type": "string",
                     "example": "2014-05"
-                }
-            }
-        },
-        "models.Response": {
-            "type": "object",
-            "properties": {
-                "month": {
-                    "type": "string"
-                },
-                "revenue": {
-                    "type": "number"
-                },
-                "unreserved_capacity": {
-                    "type": "integer"
                 }
             }
         }
